--- a/app/src/main/res/layout/fragment_hourly.xml
+++ b/app/src/main/res/layout/fragment_hourly.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/hourly_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.HourlyFragment">
+    android:layout_height="match_parent"    tools:context=".fragments.HourlyFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
